fix: sponser name wrapping

--- a/src/style/index.less
+++ b/src/style/index.less
@@ -86,10 +86,15 @@ section.is-fullheight {
   &.expand {
     &> div > a {
       opacity: 1;
-      &:nth-of-type(1) { transition-delay: .2s; }
-      &:nth-of-type(2) { transition-delay: .3s; }
-      &:nth-of-type(3) { transition-delay: .4s; }
-      &:nth-of-type(4) { transition-delay: .5s; }
+
+      .delay(@n, @i: 1) when (@i =< @n) {
+        &:nth-of-type(@{i}) {
+          transition-delay: (.1s * @i + .1s);
+        }
+        .delay(@n, (@i + 1));
+      }
+
+      .delay(5);
     }
   }
   &> div {
@@ -98,10 +103,15 @@ section.is-fullheight {
       justify-content: flex-end;
       opacity: 0;
       transition: opacity .2s ease;
-      &:nth-of-type(4) { transition-delay: .2s; }
-      &:nth-of-type(3) { transition-delay: .3s; }
-      &:nth-of-type(2) { transition-delay: .4s; }
-      &:nth-of-type(1) { transition-delay: .5s; }
+
+      .delay(@n, @i: 1) when (@i =< @n) {
+        &:nth-of-type(@{i}) {
+          transition-delay: (.1s * @n - .1s * @i + .1s);
+        }
+        .delay(@n, (@i + 1));
+      }
+
+      .delay(5);
     }
   }
 }
@@ -130,6 +140,7 @@ section.is-fullheight {
   background-color: #211f21;
   transform: translateY(60px);
   transition: all .15s ease;
+  z-index: 161;
   &.fixed-top {
     transform: translateY(0);
     &:hover > .nav-bg {
@@ -490,7 +501,7 @@ a {
 }
 
 .sponsor-logo {
-  max-height: 150px;
+  height: 150px;
 }
 
 // High res screens
