--- a/src/style/locale.less
+++ b/src/style/locale.less
@@ -1,3 +1,8 @@
+// zh
+.sponsor-text {
+  white-space: nowrap;
+}
+
 // en
 .locale-0 {
   .nav-item {
@@ -17,6 +22,8 @@
       max-height: 400px;
     }
   }
+  .sponsor-text {
+    font-size: .9em;
+    white-space: normal;
+  }
 }
-
-// zh
